--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,194 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-  <androidx.core.widget.NestedScrollView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-
-      >
 <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".MainActivity">
+    android:background="@color/black"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
-        android:gravity="center_vertical"
-        android:layout_marginEnd="10dp"
-        android:layout_toStartOf="@+id/profile"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:orientation="vertical"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="24dp"
-        >
-    <TextView
-        android:id="@+id/hiname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/panton_narrow_bold"
-        android:text="Hi Tyler Max"
-        android:textColor="@color/black"
-        android:textSize="22sp" />
-    <LinearLayout
-        android:visibility="gone"
-       android:layout_marginStart="-1dp"
-        android:id="@+id/locationLL"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/hiname"
-        android:layout_marginTop="6dp"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-
-        >
-        <ImageView
-
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:src="@drawable/ic_baseline_location_on_24"
-            />
-        <TextView
-
-
-            android:id="@+id/location"
-            android:fontFamily="@font/panton_narrow_regular"
-            android:textColor="@color/light_gray"
-            android:layout_marginStart="4dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="82MP+XQ5, Tarana"
-            />
-    </LinearLayout>
-    </LinearLayout>
-
-
-    <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/profile"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="20dp"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/ic_launcher"
-        app:riv_corner_radius="12dp" />
-    <RelativeLayout
-        android:id="@+id/searchRR"
-        android:layout_marginTop="24dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/profile"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        >
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_toStartOf="@+id/searchBtn"
-            app:cardBackgroundColor="@color/white"
-            android:layout_marginTop="3dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="4dp"
-            android:elevation="3dp"
-            app:cardCornerRadius="8dp"
-            android:layout_marginBottom="3dp"
-            >
-
-            <EditText
-                android:inputType="text"
-                android:id="@+id/searchEditText"
-                android:paddingEnd="8dp"
-                android:paddingStart="8dp"
-                android:textSize="13sp"
-                android:fontFamily="@font/panton_narrow_regular"
-                android:hint="Search by name and location"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:background="@drawable/edittext_back"
-                android:backgroundTint="@color/white"
-                />
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/searchBtn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentEnd="true"
-            android:layout_gravity="end"
-            android:layout_marginTop="3dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginBottom="3dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="3dp">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_baseline_search_24" />
-
-        </androidx.cardview.widget.CardView>
-
-
-    </RelativeLayout>
-
-<RelativeLayout
-    android:id="@+id/filterRR"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_below="@+id/searchRR"
-    android:layout_marginStart="20dp"
-    android:layout_marginTop="24dp"
-    android:layout_marginEnd="20dp"
-    >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:fontFamily="@font/panton_narrow_bold"
-        android:text="Bar For You"
-        android:textColor="@color/black"
-        android:textSize="18sp" />
-
-    <ImageView
-        android:id="@+id/filter"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:src="@drawable/ic_baseline_filter_list_24" />
-
-</RelativeLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:scrollbars="none"
-        android:nestedScrollingEnabled="false"
+    <androidx.core.widget.NestedScrollView
+        android:layout_above="@+id/lineView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/filterRR"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp" />
+        android:background="@color/black"
+        >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/black"
+            tools:context=".MainActivity">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="10dp"
+                android:layout_toStartOf="@+id/profile"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/hiname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/panton_narrow_bold"
+                    android:text="V.I.P Nashville"
+                    android:textColor="@color/white"
+                    android:textSize="22sp" />
+
+                <LinearLayout
+                    android:id="@+id/locationLL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/hiname"
+                    android:layout_marginStart="-1dp"
+                    android:layout_marginTop="6dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:visibility="gone"
+
+                    >
+
+                    <ImageView
+
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
+                        android:src="@drawable/ic_baseline_location_on_24" />
+
+                    <TextView
+
+                        android:textSize="12sp"
+                        android:id="@+id/location"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:fontFamily="@font/panton_narrow_regular"
+                        android:text="82MP+XQ5, Tarana"
+                        android:textColor="#E4E4E4" />
+                </LinearLayout>
+            </LinearLayout>
 
 
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/profile"
+                android:layout_width="44dp"
+                android:layout_height="44dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="20dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/splash"
+                app:riv_corner_radius="12dp" />
+
+            <RelativeLayout
+                android:id="@+id/searchRR"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/profile"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="3dp"
+                    android:elevation="3dp"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="8dp">
+
+                    <EditText
+                        android:drawablePadding="6dp"
+                        android:drawableStart="@drawable/ic_outline_search"
+                        android:id="@+id/searchEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:background="@drawable/edittext_back"
+                        android:backgroundTint="@color/white"
+                        android:fontFamily="@font/panton_narrow_regular"
+                        android:hint="Search by name and location"
+                        android:inputType="text"
+                        android:paddingStart="8dp"
+                        android:paddingEnd="8dp"
+                        android:textSize="13sp" />
+
+                </androidx.cardview.widget.CardView>
 
 
-</RelativeLayout>
+            </RelativeLayout>
 
-  </androidx.core.widget.NestedScrollView>
+
+            <RelativeLayout
+
+                android:id="@+id/filterRR"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/searchRR"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="20dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:fontFamily="@font/panton_narrow_bold"
+                    android:text="Bar For You"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:id="@+id/filter"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_baseline_filter_list_24" />
+
+            </RelativeLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/filterRR"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="16dp"
+                android:nestedScrollingEnabled="false"
+                android:scrollbars="none" />
+
+
+        </RelativeLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 
     <LinearLayout
         android:id="@+id/no_bar_available_LL"
-        android:visibility="gone"
         android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -202,12 +184,78 @@
             android:src="@drawable/wine"
             />
         <TextView
-            android:layout_marginTop="3dp"
+            android:textColor="@color/white"
+            android:layout_marginTop="6dp"
             android:fontFamily="@font/panton_narrow_semibold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No Bar Available"
             />
 
+    </LinearLayout>
+
+
+    <View
+        android:id="@+id/lineView"
+        android:layout_width="match_parent"
+        android:layout_height="0.9dp"
+        android:layout_above="@+id/cityLL"
+        android:layout_marginBottom="2dp"
+        android:background="#656565" />
+
+    <LinearLayout
+
+        android:id="@+id/cityLL"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+
+        android:orientation="horizontal"
+        android:padding="6dp"
+        android:weightSum="3">
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/midtownBtn"
+
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
+
+            android:layout_weight="1"
+            android:background="@drawable/citybackwhite"
+            android:fontFamily="@font/panton_narrow_semibold"
+            android:text="Midtown"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/broadwayBtn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/cityback"
+            android:fontFamily="@font/panton_narrow_semibold"
+            android:text="Broadway"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="13sp" />
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/printersAlleyBtn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/citybackwhite"
+            android:fontFamily="@font/panton_narrow_semibold"
+            android:text="Printers Alley"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
     </LinearLayout>
 </RelativeLayout>
